Fixed a bug where the useHoverSupport didn't detect tablets with stylus; updated the body to have overflow-x of hidden

--- a/app/globals.css
+++ b/app/globals.css
@@ -309,7 +309,7 @@
     }
 
     body {
-        @apply bg-my-background-100 text-foreground font-sora text-xl;
+        @apply bg-my-background-100 text-foreground font-sora text-xl overflow-x-hidden;
     }
 }
 
